--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "directories": {
+    "lib": "lib",
+    "test": "test"
   },
+  "scripts": {
+    "test": "jest --verbose --runInBand --detectOpenHandles",
+    "test:watch": "npm run test -- --watch",
+    "start": "node server.js",
+    "start:watch": "nodemon server.js"  },
+  "jest": {
+      "testEnvironment": "node"
+    },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/napple-github-io/unwasted-backend.git"
