--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "test": "jest --verbose --runInBand --detectOpenHandles",
     "test:watch": "npm run test -- --watch",
     "start": "node server.js",
-    "start:watch": "nodemon server.js"  },
+    "start:watch": "nodemon server.js"
+  },
   "jest": {
-      "testEnvironment": "node"
-    },
+    "testEnvironment": "node"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/napple-github-io/unwasted-backend.git"
@@ -28,10 +29,13 @@
   "homepage": "https://github.com/napple-github-io/unwasted-backend#readme",
   "dependencies": {
     "add-subtract-date": "^1.0.14",
+    "auth0": "^2.17.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^1.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.5.15",
     "morgan": "^1.9.1",
