--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "add-subtract-date": "^1.0.14",
     "auth0": "^2.17.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
