--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@sendgrid/mail": "^6.4.0",
     "add-subtract-date": "^1.0.14",
     "auth0": "^2.17.1",
+    "aws-sdk": "^2.479.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
@@ -41,6 +43,8 @@
     "moment": "^2.24.0",
     "mongoose": "^5.5.15",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "superagent": "^5.0.8"
   },
   "devDependencies": {
